--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^2.24.2
   gap: ^3.0.1
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
