--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,15 +19,17 @@ dependencies:
   dio: ^5.4.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
-  firebase_core: ^2.24.2
   gap: ^3.0.1
   bloc: ^8.1.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_storage: ^11.5.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
