--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   firebase_storage: ^11.5.6
+  cloud_firestore: ^4.13.6
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
