--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_storage: ^11.5.6
   cloud_firestore: ^4.13.6
   uuid: ^4.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
