--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   get_it: ^7.6.4
   font_awesome_flutter: ^10.6.0
   pinput: ^3.0.1
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
