--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   pinput: ^3.0.1
   connectivity_plus: ^5.0.2
+  # agora_rtc_engine: ^6.2.6
+  permission_handler: ^11.2.0
 
 dev_dependencies:
   flutter_test:
