--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   connectivity_plus: ^5.0.2
   # agora_rtc_engine: ^6.2.6
   permission_handler: ^11.2.0
+  firebase_app_indexing: ^0.2.0
+  firebase_app_check: ^0.2.2+4
 
 dev_dependencies:
   flutter_test:
